--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>Welcome to the world</p>
+    <p>Welcome to the world linh</p>
 </body>
 </html>
